Mon May  2 10:10:05 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c server/local_inotify.h: applied patch 2 from
	  John McCutchan for inotify 0.23

Fri Apr 15 14:18:53 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_debugging.h server/gam_inotify.c server/gam_inotify.h:
	  applied patch from John McCutchan to align inotify and dnotify 
	  back-end behaviours.


Fri Apr  8 08:05:30 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: more fixes
	* python/tests/Makefile.am python/tests/dnotify1[01].py: more
	  regression tests

Thu Apr  7 11:10:38 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c: applied patch gamin_inotify_recursive2 from
	  Andrei Lahun provided on bug #171201

Tue Apr  5 16:48:31 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: found a problem when demonitoring a directory
	  which is the child of a monitored directory related to #172596
	* python/tests/Makefile.am python/tests/dnotify8.py
	  python/tests/dnotify9.py: added a couple of regression tests for this

Mon Apr  4 13:47:57 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: applied patch from Nickolay Shmyrev to fix
	  a problem on unreadable directories.
	  Seems to break python/tests/dnotify4.py though ... need more checking.
	* python/tests/Makefile.am python/tests/readonly.py
	  tests/testing.c tests/result/11 tests/scenario/11.tst: also 
	  included the regression tests for the feature

Sun Apr  3 17:35:37 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c: applied patch from Todor Penev to fix a
	  problem on the inotify back-end

Sat Apr  2 17:41:15 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in server/Makefile.am server/gam_channel.c
	  server/gam_kqueue.c server/gam_kqueue.h server/gam_server.c:
	  applied patch from Joe Marcus Clarke, adding a kqueue based
	  kernel backend for the BSD abd MacOS X platforms.
